fix: fixed scrollbar

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -27,10 +27,11 @@ a {
 
 body {
   background-color: #000;
+  margin: 0 auto;
 }
 
 .container {
-  width: 1440px;
+  max-width: 1440px;
   margin: 0 auto;
 }
 
@@ -43,6 +44,7 @@ body {
   background: url('./assets/img/head.jpg') no-repeat;
   background-repeat: no-repeat;
   background-position: center 0;
+  background-size: auto;
 }
 
 .logo-container {
@@ -90,12 +92,15 @@ text-align: center;
 
 .hero__container {
   background: url(./assets/img/head.jpg) center -90px no-repeat;
+  background-size: auto;
   height: 820px;
-  padding: 160px 0 0 80px;
-}
+  max-width: 1440px;
+} 
+
 
 .hero {
-  width: 500px;
+  padding: 160px 0 0 80px;
+  max-width: 500px;
   height: 330px;
 }
 
@@ -182,9 +187,13 @@ h1 {
   color: #FFF;
   font-family: Inter;
   text-align: center;
+  flex-wrap: wrap;
+  justify-content: center;
+  
 }
 
 .skill-item {
+  padding-top: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -238,10 +247,12 @@ h1 {
 
 .slider-btn__container{
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: center;
   margin: 0 auto 60px;
-  width: 895px;
-  height: 55px;
+  max-width: 895px;
+  height: max-content;
+  gap: 5px;
 }
 
 .slider-btn__container button:last-child{
@@ -265,13 +276,13 @@ h1 {
   flex-wrap: wrap;
   margin: 0 auto;
   gap: 25px;
-  height: 1145px;
-  width: 1400px;
+  height: max-content;
+  justify-content: center;
 }
 
 .portfolio-item {
   display: inline-flex;
-  height: 560px;
+  
 }
 
 .videoplayer__container {
@@ -279,9 +290,10 @@ h1 {
   align-items: center;
   justify-content:center;
   margin: auto;
-  width: 1400px;
+  max-width: 1400px;
   height: 705px;
   background: url(./assets/img/video-player.jpg) no-repeat;
+  background-size: auto;
 }
 
 .play-button {
@@ -293,9 +305,10 @@ h1 {
 
 .price-item__container {
   display: flex;
-  justify-content: space-between;
-  width: 1400px;
-  height: 505px;
+  justify-content: center;
+  gap: 50px;
+  flex-wrap: wrap;
+  height: max-content;
   margin: 0 auto 100px;
 }
 
@@ -341,15 +354,14 @@ h1 {
 
 .contacts {
   background: url(./assets/img/bottom.jpg) no-repeat;
-  width: 1440px;
+  background-size: auto;
   height: 700px;
-  padding-top: 60px;
 }
 
 .contact__container {
   width: 450px;
   height: 445px;
-  margin: 0 20px 195px 970px;
+  margin: 60px 20px 195px auto;
 }
 
 .contact-title {
@@ -502,15 +514,15 @@ a {
 
 @media (max-width: 768px) {
   .container {
-    width: 768px;
+    max-width: 768px;
   }
   
   .portfolio-items__container{
-    width: 768px;
+    max-width: 768px;
   }
   
   .videoplayer__container{
-    width: 768px;
+    max-width: 768px;
   }
 
   .skills {
@@ -520,25 +532,11 @@ a {
   }
 
   .skills-item__container {
-    width: 728px;
+    max-width: 728px;
     height: 520px;
     flex-wrap: wrap;
-  }
-
-  .skills-item__container .skill-item:nth-child(1) {
-    margin: 14px 44px 36px 40px;
-  }
-
-  .skills-item__container .skill-item:nth-child(2) {
-    margin: 14px 44px 36px 0px;
-  }
-
-  .skills-item__container .skill-item:nth-child(3) {
-      margin: 0px 44px 27px 40px;
-    }
-
-  .skills-item__container .skill-item:nth-child(4) {
-    margin: 0px 44px 27px 0px;
+    height: max-content;
+    gap:40px;
   }
 
   .skill-item__icon {
@@ -546,9 +544,8 @@ a {
   }
 
   .skill-item {
-    margin: 0 44px 0 0;
-    width: 300px;
     height: 224px;
+    margin: 0%;
   }
 
   .item-subtitle {
@@ -565,7 +562,6 @@ a {
   .hero__container{
     background: url(./assets/img/tablet-head.jpg) center -89px no-repeat;
     background-size: auto;
-    padding: 78px 0 152px 60px;
     height: 500px;
   }
 
@@ -581,11 +577,12 @@ a {
     font-family: Inter;
     font-size: 20px;
     line-height: 24px;
-    width: 390px;
+    max-width: 390px;
     height: 72px;
   }
 
   .hero {
+    padding: 78px 0 0 60px;
     height: 270px;
   }
   
@@ -602,11 +599,11 @@ a {
     font-size: 32px;
     line-height: 40px;
     text-align: center;
-    
+    overflow: hidden;
   }
 
   .skills {
-    margin: 0px;
+    margin: 0;
   }
 
   .skills-item__container {
@@ -621,8 +618,12 @@ a {
   }
 
   .portfolio {
-    width: 768px;
+    max-width: 768px;
     height: 3790px;
+  }
+
+  .portfolio-title__container {
+    margin-top: 130px;
   }
 
   .portfolio-title {
@@ -651,7 +652,7 @@ a {
   .videoplayer__container {
     margin-top: 50px;
     background: url(./assets/img/tablet-video-player.jpg) no-repeat;
-    width: 768px;
+    max-width: 768px;
     height: 418px;
   }
 
@@ -675,7 +676,7 @@ a {
 
   .price-item__container{
     margin-top: 50px;
-    width: 768px;
+    max-width: 768px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -683,7 +684,7 @@ a {
   }
 
   .price-item {
-    width: 420px;
+    max-width: 420px;
     height: 505px;
   }
 
@@ -710,7 +711,7 @@ a {
 
   .contacts {
     background: url(./assets/img/tablet-contacts.jpg) no-repeat;
-    width: 768px;
+    max-width: 768px;
     height: 600px;
     display: flex;
     flex-direction: column;
@@ -718,7 +719,7 @@ a {
   }
 
   .contact__container {
-    margin: 0px;
+    margin: 60px 0px 0px 0px;
   }
 
   .contact-title {
